# external_camera_calibration

./: CMakeLists.txt  README.md  package.xml
config/: calibrated_camera  calibrated_camera_rzryrx  calibrated_camera_wxyz  config2  config3  kinect_world.world
include/depth_camera_pose_calibration/: depth_camera_pose_calibration.h
launch/: camera_calibration.launch  launch_calibrated_real_sense.launch  spawn_kinect.launch  test.launch  ur_kinect_test.launch  ur_test.launch
scripts/: calibration_gui.py
src/: depth_camera_pose_calibration.cpp
